pkg/synthesis/tests_expected_output/k8s_resources/ExampleHogwartsExternal/policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = Web and group = Gryffindor) dst: (IP addr in 0.0.1.0/16) conn: TCP'
        nsx-id: "10400"
    creationTimestamp: null
    name: policy-0
    namespace: default
spec:
    egress:
        - ports:
            - protocol: TCP
          to:
            - ipBlock:
                cidr: 0.0.0.0/16
    podSelector:
        matchExpressions:
            - key: group__Web
              operator: Exists
            - key: group__Gryffindor
              operator: Exists
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = Web and group = Hufflepuff) dst: (IP addr in 0.0.1.0/16) conn: UDP dst-ports: 300-320'
        nsx-id: "10400"
    creationTimestamp: null
    name: policy-1
    namespace: default
spec:
    egress:
        - ports:
            - endPort: 320
              port: 300
              protocol: UDP
          to:
            - ipBlock:
                cidr: 0.0.0.0/16
    podSelector:
        matchExpressions:
            - key: group__Web
              operator: Exists
            - key: group__Hufflepuff
              operator: Exists
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = Web and group = Slytherin) dst: (IP addr in 0.0.1.0/16) conn: All Connections'
        nsx-id: "10400"
    creationTimestamp: null
    name: policy-2
    namespace: default
spec:
    egress:
        - to:
            - ipBlock:
                cidr: 0.0.0.0/16
    podSelector:
        matchExpressions:
            - key: group__Web
              operator: Exists
            - key: group__Slytherin
              operator: Exists
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = App and group = Gryffindor) dst: (IP addr in 146.2.0.0/16) conn: TCP'
        nsx-id: "10401"
    creationTimestamp: null
    name: policy-3
    namespace: default
spec:
    egress:
        - ports:
            - protocol: TCP
          to:
            - ipBlock:
                cidr: 146.2.0.0/16
    podSelector:
        matchExpressions:
            - key: group__App
              operator: Exists
            - key: group__Gryffindor
              operator: Exists
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = App and group = Hufflepuff) dst: (IP addr in 146.2.0.0/16) conn: UDP dst-ports: 300-320'
        nsx-id: "10401"
    creationTimestamp: null
    name: policy-4
    namespace: default
spec:
    egress:
        - ports:
            - endPort: 320
              port: 300
              protocol: UDP
          to:
            - ipBlock:
                cidr: 146.2.0.0/16
    podSelector:
        matchExpressions:
            - key: group__App
              operator: Exists
            - key: group__Hufflepuff
              operator: Exists
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = App and group = Slytherin) dst: (IP addr in 146.2.0.0/16) conn: All Connections'
        nsx-id: "10401"
    creationTimestamp: null
    name: policy-5
    namespace: default
spec:
    egress:
        - to:
            - ipBlock:
                cidr: 146.2.0.0/16
    podSelector:
        matchExpressions:
            - key: group__App
              operator: Exists
            - key: group__Slytherin
              operator: Exists
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = DB and group = Gryffindor) dst: (IP addr in 220.0.1.0/28) conn: TCP'
        nsx-id: "10405"
    creationTimestamp: null
    name: policy-6
    namespace: default
spec:
    egress:
        - ports:
            - protocol: TCP
          to:
            - ipBlock:
                cidr: 220.0.1.0/28
    podSelector:
        matchExpressions:
            - key: group__DB
              operator: Exists
            - key: group__Gryffindor
              operator: Exists
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = DB and group = Hufflepuff) dst: (IP addr in 220.0.1.0/28) conn: UDP dst-ports: 300-320'
        nsx-id: "10405"
    creationTimestamp: null
    name: policy-7
    namespace: default
spec:
    egress:
        - ports:
            - endPort: 320
              port: 300
              protocol: UDP
          to:
            - ipBlock:
                cidr: 220.0.1.0/28
    podSelector:
        matchExpressions:
            - key: group__DB
              operator: Exists
            - key: group__Hufflepuff
              operator: Exists
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = DB and group = Slytherin) dst: (IP addr in 220.0.1.0/28) conn: All Connections'
        nsx-id: "10405"
    creationTimestamp: null
    name: policy-8
    namespace: default
spec:
    egress:
        - to:
            - ipBlock:
                cidr: 220.0.1.0/28
    podSelector:
        matchExpressions:
            - key: group__DB
              operator: Exists
            - key: group__Slytherin
              operator: Exists
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (IP addr in 122.0.0.0/8) dst: (group = Dumbledore) conn: All Connections'
        nsx-id: "10406"
    creationTimestamp: null
    name: policy-9
    namespace: default
spec:
    ingress:
        - from:
            - ipBlock:
                cidr: 122.0.0.0/8
    podSelector:
        matchExpressions:
            - key: group__Dumbledore
              operator: Exists
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: Default Deny Network Policy
        nsx-id: "10230"
    creationTimestamp: null
    name: default-deny
    namespace: default
spec:
    podSelector: {}
    policyTypes:
        - Ingress
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: Network Policy To Allow Access To DNS Server
        nsx-id: none
    creationTimestamp: null
    name: dns-policy
    namespace: default
spec:
    egress:
        - ports:
            - port: 53
              protocol: UDP
          to:
            - namespaceSelector: {}
              podSelector:
                matchLabels:
                    k8s-app: kube-dns
    podSelector: {}
    policyTypes:
        - Egress
